--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
 header {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 20px;
+}
+nav {
+  display: flex;
+  gap: 20px;
 }
